--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ VITE_FIREBASE_MEASUREMENT_ID=G-HB89NRH547
 # VITE_EMAILJS_USER_ID=fVHRzzG1yJLPK4m_k
 
 # Base URL for your application (update if needed)
-# VITE_BASE_URL=https://your-new-app.vercel.app/
+VITE_BASE_URL="http://localhost:5173/"
